[package]
name = "reve"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.25", features = ["derive"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
clearscreen = "1.0.10"
colored = "2.0.0"
indicatif = "0.17.1"
dialoguer = "0.10.2"
path-clean = "0.1.0"
iced = { version = "0.6", features = ["smol"]}
